kyverno-resource-limit.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: check-resource-limits
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Resource limits and requests are required."
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    memory: "*"
                    cpu: "*"
                  requests:
                    memory: "*"
                    cpu: "*"
